zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/history_tree@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
expression: "(max_height, history_tree_at_tip)"
---
(
    Height(
        1,
    ),
    HistoryTree(
        None,
    ),
)
